--- a/about.html
+++ b/about.html
@@ -197,10 +197,10 @@
 
   <section class="hero about-hero" style="color: #ff6f00;">
   <h1 class="hero-title"> OUR JOURNEY</h1>
-  <p class="hero-text">
-    For over <strong>21 years</strong>, our journey has been one of passion, flavor, and dedication.  
+  <p class="hero-text" style="color: white;">
+    <strong>For over 21 years, our journey has been one of passion, flavor, and dedication.  
     Since 2004, Blooming Chicken has grown into a trusted brand in Abuja’s food scene —  
-    a place where quality, warmth, and unforgettable taste come together in every dish.
+    a place where quality, warmth, and unforgettable taste come together in every dish.</strong>
   </p>
 </section>
 
