--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     .hero {
   background: 
     linear-gradient(rgba(250, 186, 109, 0.5), rgba(255,140,0,0.3)),
-    url("image/BLOOMING CHICKEN LOGO.jpg") center no-repeat;
+    url("") center no-repeat;
 
   background-size: contain; /* makes the picture smaller */
   background-position:left center;
