--- a/index.html
+++ b/index.html
@@ -13,29 +13,19 @@
 
   <!-- HEADER -->
   <header>
-    <h1 style="display: flex; align-items: center; gap: 15px;">
-  <img 
-    src="image/BLOOMING CHICKEN LOGO.jpg" 
-    alt="Blooming Chicken Logo" 
-    style="width: 200px; 
-           height: 200px; 
-           border-radius: 50%; 
-           object-fit: cover; 
-           vertical-align: middle;"
-  >
- <span style="font-size: 70px; font-weight: bold;">
-    BLOOMING <br> CHICKEN
-</span>
+  <h1>
+    <img src="image/BLOOMING CHICKEN LOGO.jpg" alt="Blooming Chicken Logo">
+    <span>BLOOMING <br> CHICKEN</span>
+  </h1>
 
-</h1>
+  <nav>
+    <a href="index.html" class="active">Home</a>
+    <a href="menu.html">Menu</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="menu.html">Menu</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
 
  <section class="hero">
   <h2 style="color: white;"><strong>Welcome to Blooming Chicken</strong></h2>
